Add the VM arguments to the run configuration